@@ -12,7 +12,7 @@ FONT = -lSDL_ttf
 IMAGE = -lSDL_image
 MIXER = -lSDL_mixer
 SMPEG = -lsmpeg
-EXTRABASE =
+NUMERIC = -I/usr/include/python2.0/Numeric
 #--EndConfig
 
 
@@ -25,6 +25,7 @@ font src/font.c $(SDL) $(FONT)
 mixer src/mixer.c $(SDL) $(MIXER)
 mixer_music src/music.c $(SDL) $(MIXER)
 movie src/movie.c $(SDL) $(SMPEG)
+surfarray src/surfarray.c $(SDL) $(NUMERIC)
 
 
 
@@ -32,7 +33,6 @@ movie src/movie.c $(SDL) $(SMPEG)
 #python dependencies. the setup script can determine if these
 #are available at runtime, no need to change these
 
-surfarray src/surfarray.c $(SDL)    #requires Numeric
 
 
 
